--- a/vignettes/using_schex.Rmd
+++ b/vignettes/using_schex.Rmd
@@ -99,7 +99,7 @@ tenx_pbmc3k <- tenx_pbmc3k[!rm_ind,]
 
 ### Normalization
 
-I normalize the data by using a simple library size normalization feature.
+I normalize the data by using a simple library size normalization.
 
 ```{r norm, message=FALSE, warning=FALSE}
 tenx_pbmc3k <- scater::normalize(tenx_pbmc3k)
@@ -109,7 +109,7 @@ tenx_pbmc3k <- scater::normalize(tenx_pbmc3k)
 
 I use both Principal Components Analysis (PCA) and Uniform Manifold 
 Approximation and Projection (UMAP) in order to obtain reduced dimension 
-representations of the data. Since there is a random component in the UMAP, we
+representations of the data. Since there is a random component in the UMAP, I
 will also set a seed.
 
 ```{r dim-red, message=FALSE, warning=FALSE}
@@ -121,7 +121,7 @@ tenx_pbmc3k <- runUMAP(tenx_pbmc3k, dimred = "PCA", spread = 1,
 
 ### Clustering
 
-I will cluster the data with on the PCA representation using Louvain clustering.
+I will cluster the data on the PCA representation using Louvain clustering.
 
 ```{r cluster}
 snn_gr <- buildSNNGraph(tenx_pbmc3k, use.dimred = "PCA", k = 50)
@@ -207,4 +207,26 @@ hexagon cell representation than the classic representation.
 
 ```{r plot-gene-trad, fig.height=7, fig.width=7}
 plotUMAP(tenx_pbmc3k, by_exprs_values="logcounts", colour_by=gene_id)
+```
+
+### Understanding `schex` output as `ggplot` objects
+
+The `schex` packages renders ordinary `ggplot` objects and thus these can be 
+treated and manipulated using the 
+[`ggplot` grammar](https://ggplot2.tidyverse.org/). For example the non-data
+components of the plots can be changed using the function `theme`.
+
+```{r}
+gene_id <-"CD19"
+gg <- schex::plot_hexbin_gene(pbmc, type="data", gene=gene_id, 
+                 action="mean", xlab="UMAP1", ylab="UMAP2", 
+                 title=paste0("Mean of ", gene_id))
+gg + theme_void()
+```
+
+The fact that `schex` renders `ggplot` objects can also be used to save these 
+plots. Simply use `ggsave` in order to save any created plot.
+
+```{r, eval=FALSE}
+ggsave(gg, file="schex_plot.pdf")
 ```
