--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -18,7 +18,7 @@ theme_set(theme_classic())
 ```
 
 Reduced dimension plotting is one of the essential tools for the analysis of 
-single cell data. However, as the number of cells/nuclei in these these plots 
+single cell data. However, as the number of cells/nuclei in these plots 
 increases, the usefulness of these plots decreases. Many cells are plotted
 on top of each other obscuring information, even when taking advantage of
 transparency settings. This package provides binning strategies of cells/nuclei
@@ -45,7 +45,7 @@ library(TENxPBMCData)
 In order to demonstrate the capabilities of the schex package, I will use the
 a dataset of Peripheral Blood Mononuclear Cells (PBMC) freely available from 
 10x Genomics. There are 2,700 single cells that were sequenced on the 
-Illumina NextSeq 500. This data is handly availabe in the [`TENxPBMCData` package](http://bioconductor.org/packages/release/data/experiment/html/TENxPBMCData.html). 
+Illumina NextSeq 500. This data is handly available in the [`TENxPBMCData` package](http://bioconductor.org/packages/release/data/experiment/html/TENxPBMCData.html). 
 Note that we will then have to convert the `SingleCellExperiment` object to a 
 `Seurat` object first.
 
