Syntax issue on lines 148 & 162
Former-commit-id: d01294f5d53e6d79719c002aa312041a82cdb22e
Former-commit-id: 0f10ef3f38e15aae4d7d9395dca3af254ba2aaaf
Former-commit-id: d42e75ef4f0714666f63b6b393b218448d257893

--- a/vignettes/shiny_schex.Rmd
+++ b/vignettes/shiny_schex.Rmd
@@ -145,7 +145,7 @@ app <- iSEE(
     )
 ```
 
-Unfortunately in the iSEE application plots cannot be changed to diplay 
+Unfortunately in the iSEE application plots cannot be changed to display 
 different genes as conveniently as with `shinydashboards`. If you want
 to diplay a different gene you will need to edit the following box:
 
@@ -159,4 +159,4 @@ action prop_0
 rownames CD19
 ```
 
-you can change the plot to dsiplay the expression of *CD19*. 
+you can change the plot to display the expression of *CD19*. 
