--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -161,7 +161,7 @@ hexagon cell representation.
 
 ```{r plot-gene, fig.height=7, fig.width=7}
 gene_id <-"CD19"
-schex::plot_hexbin_gene(pbmc, type="data", gene=gene_id, 
+schex::plot_hexbin_feature(pbmc, type="data", feature=gene_id, 
     action="mean", xlab="UMAP1", ylab="UMAP2", 
     title=paste0("Mean of ", gene_id))
 ```
@@ -175,7 +175,7 @@ components of the plots can be changed using the function `theme`.
 
 ```{r}
 gene_id <-"CD19"
-gg <- schex::plot_hexbin_gene(pbmc, type="data", gene=gene_id, 
+gg <- schex::plot_hexbin_feature(pbmc, type="data", feature=gene_id, 
     action="mean", xlab="UMAP1", ylab="UMAP2", 
     title=paste0("Mean of ", gene_id))
 gg + theme_void()
