fixed error in vignette due to new Seurat
Former-commit-id: e4ad0d2c89565c18d42710f0d8c384a790c643f0
Former-commit-id: c2305cb401a72bbd2601214cb97d79e8da7ff120 [formerly fbb201b8f6288c1e89afdb7d5d02d9badcdec2bf]
Former-commit-id: 88167784dcd0c90710e82ce5724b9b9dde282bea

--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -151,6 +151,7 @@ Next I colour the hexagon cells by some meta information, such as the median
 total count in each hexagon cell.
 
 ```{r plot-meta-1, fig.height=7, fig.width=7}
+pbmc$nCount_RNA <- colSums(GetAssayData(pbmc, assay="RNA", "data"))
 plot_hexbin_meta(pbmc, col="nCount_RNA", action="median")
 ```
 
