--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -107,7 +107,7 @@ hexagon cell representation.
 
 ```{r plot-gene, fig.height=7, fig.width=7}
 gene_id <-"CD1C"
-schex::plot_hexbin_feature(pbmc_small, type="scale.data", feature=gene_id, 
+schex::plot_hexbin_feature(pbmc_small, type="RNA", feature=gene_id, 
     action="mean", xlab="UMAP1", ylab="UMAP2", 
     title=paste0("Mean of ", gene_id))
 ```
@@ -121,7 +121,7 @@ components of the plots can be changed using the function `theme`.
 
 ```{r}
 gene_id <-"CD1C"
-gg <- schex::plot_hexbin_feature(pbmc_small, type="scale.data", feature=gene_id, 
+gg <- schex::plot_hexbin_feature(pbmc_small, type="RNA", feature=gene_id, 
     action="mean", xlab="UMAP1", ylab="UMAP2", 
     title=paste0("Mean of ", gene_id))
 gg + theme_void()
