--- a/vignettes/Seurat_schex.Rmd
+++ b/vignettes/Seurat_schex.Rmd
@@ -16,7 +16,7 @@ library(ggplot2)
 theme_set(theme_classic())
 ```
 
-Reduced dimension plotting is one of the essential tools for the analysis of single cell data. However, as the number of cells/nuclei in these plots increases, the usefulness of these plots decreases. Many cells are plotted on top of each other obscuring information, even when taking advantage of transparency settings. This package provides binning strategies of cells/nuclei into hexagon cells. Plotting summarized information of all cells/nuclei in their respective hexagon cells presents information without obstructions. The package seemlessly works with the two most common object classes for the storage of single cell data; `SingleCellExperiment` from the [SingleCellExperiment](https://bioconductor.org/packages/3.9/bioc/html/SingleCellExperiment.html) package and `Seurat` from the [Seurat](https://satijalab.org/seurat/) package. In this vignette I will be presenting the use of `schex` for `Seurat` objects.
+Reduced dimension plotting is one of the essential tools for the analysis of single cell data. However, as the number of cells/nuclei in these plots increases, the usefulness of these plots decreases. Many cells are plotted on top of each other obscuring information, even when taking advantage of transparency settings. This package provides binning strategies of cells/nuclei into hexagon cells. Plotting summarized information of all cells/nuclei in their respective hexagon cells presents information without obstructions. The package seemlessly works with the two most common object classes for the storage of single cell data; `SingleCellExperiment` from the [SingleCellExperiment](https://bioconductor.org/packages/3.9/bioc/html/SingleCellExperiment.html) package and `Seurat` from the [Seurat](https://satijalab.org/seurat/) package. In this vignette I will be presenting the use of `schex` for `SingleCellExperiment` objects that are converted from `Seurat` objects.
 
 ## Load libraries
 
@@ -36,12 +36,19 @@ pbmc_small
 
 ### Perform dimensionality reductions
 
-The dataset already contains two dimension reductions (PCA and TSNE). We will now add UMAP. Since there is a random component in the UMAP, we will set a seed.
+The dataset already contains two dimension reductions (PCA and TSNE). We will now add UMAP. Since there is a random component in the UMAP, we will set a seed. You can also add dimension reductions after conversion using package that include functionalities for SingleCellExperiment objects.
 
 ```{r umap, message=FALSE, warning=FALSE}
 set.seed(10)
 pbmc_small <- RunUMAP(pbmc_small, dims=1:10,
       verbose = FALSE)
+```
+### Converting to SingleCellExperiment object
+
+We will now convert the Seurat object into a SingleCellExperiment object.
+
+```{r seurat-to-sce, message=FALSE, warning=FALSE}
+pbmc.sce <- as.SingleCellExperiment(pbmc_small)
 ```
 
 ## Plotting single cell data
@@ -53,7 +60,7 @@ At this stage in the workflow we usually would like to plot aspects of our data 
 First, I will calculate the hexagon cell representation for each cell for a specified dimension reduction representation. I decide to use `nbins=40` which specifies that I divide my x range into 10 bins. Note that this might be a parameter that you want to play around with depending on the number of cells/ nuclei in your dataset. Generally, for more cells/nuclei, `nbins` should be increased.
 
 ```{r calc-hexbin}
-pbmc_small <- make_hexbin(pbmc_small, nbins = 10, 
+pbmc.sce <- make_hexbin(pbmc.sce, nbins = 10, 
     dimension_reduction = "UMAP")
 ```
 
@@ -62,7 +69,7 @@ pbmc_small <- make_hexbin(pbmc_small, nbins = 10,
 First I plot how many cells are in each hexagon cell. This should be relatively even, otherwise change the `nbins` parameter in the previous calculation.
 
 ```{r plot-density, fig.height=7, fig.width=7}
-plot_hexbin_density(pbmc_small)
+plot_hexbin_density(pbmc.sce)
 ```
 
 #### Plot meta data in hexagon cell representation
@@ -70,7 +77,7 @@ plot_hexbin_density(pbmc_small)
 Next I colour the hexagon cells by some meta information, such as the median total count in each hexagon cell.
 
 ```{r plot-meta-1, fig.height=7, fig.width=7}
-plot_hexbin_meta(pbmc_small, col="nCount_RNA", action="median")
+plot_hexbin_meta(pbmc.sce, col="nCount_RNA", action="median")
 ```
 
 #### Plot gene expression in hexagon cell representation
@@ -79,7 +86,7 @@ Finally, I will visualize the gene expression of the CD1C gene in the hexagon ce
 
 ```{r plot-gene, fig.height=7, fig.width=7}
 gene_id <-"CD1C"
-schex::plot_hexbin_feature(pbmc_small, type="RNA", feature=gene_id, 
+schex::plot_hexbin_feature(pbmc.sce, type="counts", feature=gene_id, 
     action="mean", xlab="UMAP1", ylab="UMAP2", 
     title=paste0("Mean of ", gene_id))
 ```
@@ -90,7 +97,7 @@ The `schex` packages renders ordinary `ggplot` objects and thus these can be tre
 
 ```{r}
 gene_id <-"CD1C"
-gg <- schex::plot_hexbin_feature(pbmc_small, type="RNA", feature=gene_id, 
+gg <- schex::plot_hexbin_feature(pbmc.sce, type="counts", feature=gene_id, 
     action="mean", xlab="UMAP1", ylab="UMAP2", 
     title=paste0("Mean of ", gene_id))
 gg + theme_void()
